[package]
name = "bulk-payment-contract"
description = "NEAR smart contract for bulk payment processing - Part of Trezu"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.86"
repository = "https://github.com/NEAR-DevHub/trezu"

[lib]
crate-type = ["cdylib", "rlib"]

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.20.3-rust-1.93.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:8e61653261766ff251a6c6c2004f2745446fc1ba74d807b3daf6e2cc5cf99ea9"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.28"

[dev-dependencies]
near-sdk = { version = "5.28", features = ["unit-testing"] }
near-sandbox = "0.3"
near-api = "0.8"
near-crypto = "0.36"
cargo-near-build = "0.11.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
base64 = "0.22"
camino = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
